--- a/trunk/css/registration.css
+++ b/trunk/css/registration.css
@@ -24,14 +24,16 @@
 }
 
 .reg_info{
-	padding:70px 0 60px;
+	padding:40px 0;
 	color:#999;
 	text-align:center;
 	font-size:18px;
+	line-height:24px;
 }
 
 #social_logins{
 	text-align:center;
+	padding:40px 0;
 }
 
 #social_logins a{
@@ -63,6 +65,8 @@
 	font-size:24px;
 	padding:10px 0;
 	margin-bottom:15px;
+	cursor:pointer;
+	font-weight:normal;
 }
 
 #head .arrow > div > span,
@@ -70,6 +74,7 @@
 	font-size:20px;
 	height: 28px;
 	padding-top: 2px;
+	line-height:24px;
 }
 .auth_block  .gray{
 	text-align:center;
@@ -77,7 +82,9 @@
 	display:block;
 	padding-bottom:3px;
 }
-
+.auth_block  .gray:hover{
+	text-decoration:none;
+}
 #auth_remi,
 #login_short_form{
 	display:none;
@@ -96,4 +103,5 @@
 	text-align:center;
 	color:#f00;
 	font-size:18px;
+	padding-bottom:30px;
 }
