--- a/trunk/css/share.css
+++ b/trunk/css/share.css
@@ -10,6 +10,7 @@ body {
 	font-size:12px;
 	color:#000;
 	background:#fff url(/img/shadow_bg.jpg) center 60px repeat-x;
+	line-height: 18px;
 }
 
 #wrapper {
@@ -17,8 +18,8 @@ body {
 	height: auto !important;
 	height: 100%;
 	margin: 0 auto -100px; /* нижний margin является отрицательной величиной высоты footer */
-	min-width:990px;
-	max-width:1600px;
+	min-width:990px;	
+	padding-top:60px;
 }
 
 #footer, #push {
@@ -28,13 +29,23 @@ body {
 }
 
 #footer {
-	background:#efefef;
+	background:#fff;
+	height:40px;
+	border-top:1px solid #f0f0f0;
+	position:fixed;
+	bottom:0; left:0;
+	width:100%;
+	z-index:30;
 }
 
 #head{
 	height:60px;
-	position:relative;
-	
+	position:fixed;
+	top:0; left:0;
+	width:100%;
+	z-index:30;
+	background:#fff;
+	border-bottom: 1px solid #f0f0f0;
 }
 
 #head #logo{
@@ -42,7 +53,7 @@ body {
 	float:left;
 	background:url(/img/logo.jpg) 0 center no-repeat;
 	height:60px;
-	left:20px;
+	left:10px;
 	top:0;
 	position:absolute;
 	z-index:9;
@@ -59,7 +70,6 @@ body {
 }
 #head .center{
   padding: 0 230px 0 255px;
-  height:100%;
 }
 #head .right,
 #head .center{
@@ -148,22 +158,23 @@ body {
 #write_review{
 	display:block;
 	float:right;
-	width:145px;
-	margin-right:20px;
+	width:155px;
+	margin-right:10px;
 	height: 24px;
   padding-top: 6px;
 	background:#00c6ff;
 	color:#fff;
 	font-size: 14px;
 	text-decoration:none;
+	font-weight:bold;
 }
 #write_review i{
   background: url("/img/sprite.png") no-repeat scroll -19px 0 transparent;
-  border-right: 1px solid #FFFFFF;
+  /*border-right: 1px solid #FFFFFF;*/
   display: block;
   float: left;
   height: 18px;
-  margin: 0 5px;
+  margin:0 5px 0 8px;
   padding-right: 3px;
   width: 16px;
 }
@@ -180,12 +191,31 @@ body {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='#CCCCCC')";
 	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='#CCCCCC');
 
-  left: 0;
+  left: -11px;
   padding: 10px;
   position: absolute;
-  top: 38px;
+  top: 42px;
   width: 178px;
   z-index: 90;
+}
+.nav_drop.up{
+	top:auto;
+	bottom: 27px;
+	left:auto;
+	right:0;
+}
+.nav_drop.up .arr,
+.nav_drop.up .arr span{
+  top:auto;
+  bottom:-20px;
+  left:auto;
+  right: 50px;
+  border-color: #dfdfdf transparent transparent transparent;
+}
+.nav_drop.up .arr span{
+  bottom: -7px;
+  right:-10px;
+	border-color: #fff transparent transparent transparent;
 }
 
 #user_subnav .arr,
@@ -193,7 +223,7 @@ body {
 .nav_drop .arr,
 .nav_drop .arr span{
 	position:absolute;
-	left:1px;
+	left:15px;
 	top:-20px;
 	border-color: transparent transparent #dfdfdf transparent;
   border-style: solid;
@@ -207,7 +237,7 @@ body {
 #user_subnav .arr span,
 .nav_drop .arr span{
 	left: -10px;
-  top: -9px;
+  top: -7px;
 	border-color: transparent transparent #fff transparent;
 }
 
@@ -279,12 +309,12 @@ body {
 	display:none;
 	background:#fff;
   border: 1px solid #DFDFDF;
-  box-shadow: 0 1px 2px #777777;
-  left: 2px;
+  box-shadow: 0 1px 1px #777777;
+  left: 40px;
   padding: 13px;
   position: absolute;
   top: 38px;
-  width: 154px;
+  width: 127px;
   z-index: 90;
 }
 #login_block #login_form input{
@@ -293,8 +323,8 @@ body {
   border-width: 1px;
   margin-bottom:5px;
   padding: 3px 0 3px 8px;
-  width: 145px;
-  font-size:16px;
+  width: 118px;
+  font-size:12px;
 }
 #login_block #login_form .submit{
 	background: none repeat scroll 0 0 #00C6FF;
@@ -302,24 +332,33 @@ body {
   color: #FFFFFF;
 	font-weight:bold;
   text-align: center;
-  width:155px;
+  width:128px;
   margin-bottom:0;
   font-size:16px;
   padding:2px 0;
+  cursor:pointer;
 }
 #login_block .foot{color:#687184;}
 #login_block .foot #uLogin{
 	padding-left:6px;
-	height:16px;
+	height:24px;
+	text-align:center;
+	padding-top:10px;
 }
-
+#login_block .foot a{
+	color:#00C6FF;
+	font-size:11px;
+}
+#login_block .foot a:hover{
+	text-decoration:none;
+}
 #login_block .arr,
 #login_block .arr span{
   border-color: transparent transparent #DFDFDF;
     border-style: solid;
     border-width: 10px;
     height: 0;
-    left: 42px;
+    left: 70px;
     margin: 0;
     padding: 0;
     position: absolute;
@@ -352,8 +391,7 @@ body {
 #login_block .title{
 	font-size:12px;
 	color:#000;
-	background:#fff;
-	border-bottom:1px solid #DFDFDF;
+	background:#fff;	
 	display:block;
 	font-weight:bold;
 	padding-bottom:5px;
@@ -361,8 +399,7 @@ body {
 }
 
 #login_block .foot{
-	font-size:10px;
-	border-top:1px solid #DFDFDF;
+	font-size:10px;	
 	display:block;
 	padding-top:5px;
 	margin-top:5px;
@@ -386,29 +423,50 @@ body {
 	background:#fff;
 	position:absolute;
 	z-index:30;
+	width: 100%;
+	margin-left: -10px;
+	box-shadow: 0 3px 2px #cfcfcf;
 }
 
 .resultList{
 	list-style:none;
-	padding:0; margin:0;
+	padding:0; margin:0 5px;
 }
 .resultList li{
-  padding:5px; margin:0;
+/*  padding:5px; margin:0;
   clear:both;
-  border-bottom:1px solid #e4e4e4;
+  border-bottom:1px solid #e4e4e4;*/
+padding: 5px;
+margin: 0;
+clear: both;
+border-bottom: 1px solid #efefef;
+font-size: 24px;
+color: #687184;
+padding: 10px 5px;
   
 }
+.resultList li:hover{
+
+	background: #fafafa;
+margin-left: -5px;
+margin-right: -5px;
+padding-left: 10px;
+padding-right: 10px;
+}
+.resultList li a{
+	color: #00c6ff;
+}
 .resultList .head{
-	color:#000;
-	font-size:14px;
-	font-weight:bold;
-	padding-bottom:10px;
-	margin-bottom:10px;
-	border-bottom:1px solid #e4e4e4;
+	color: #687184;
+font-size: 12px;
+font-weight: normal;
+padding-bottom: 0px;
+margin-top: 10px;
+border-bottom: none;
 }
 
 .resultList li .point_img{
-	width:50px; height:50px; float:left; margin-right:5px;
+	width:50px; float:left; margin-right:10px;
 }
 .resultList li .point_img img{width:100%;}
 .resultList li p{
@@ -417,11 +475,18 @@ body {
 
 .resultList li p a{
 	text-decoration:none;
+	color:#687184;
+	font-size:13px;
+font-weight:bold
+}
+.resultList li p a:hover{	
 	color:#000;
+	
 }
 .resultList li p small{
-	color:#555;
-	font-size:10px;
+	color:#687184;
+	font-size:11px;
+	font-weight:normal;
 	
 }
 
@@ -429,38 +494,88 @@ body {
 	width:960px;
 	margin:0 auto;
 }
+.review_form label{
+	font-size:30px;
+	color:#434343;
+	border-bottom:1px solid #dedede;
+	padding:20px 15px 18px 15px;
+	margin-bottom:18px;
+	display:block;
+}
+.review_form p{
+	font-size:12px;
+	color:#434343;
+	padding:0 15px 20px 15px;
+}
+.review_form textarea{
+	width:100%;
+	height:175px;
+}
+
+.review_form .foot{
+  border-top:1px solid #dedede;
+  margin-top:20px;
+  padding-top:20px;
+}
 
 .review_form .recomend_block{
  	text-align:center;
- 	padding:25px 0 15px 0;
+ 	padding:0;
+ 	float:left;
+ 	width:60%;
+ 	margin-left:-5px;
+}
+
+.review_form .recomend_block > span{
+  color:#434343;
+  font-size:12px;
+  display:block;
+  height:20px;
+  display:none;
 }
 
 .review_form .recomend_block a{
-	padding:5px;
-	margin-top:-5px;
-	background:#00C6FF;
-	color:#fff;
-	text-decoration:none;
-	display: -moz-inline-stack;
-	display: inline-block;
-	vertical-align: top;
-	zoom: 1;
-	*display: inline;
-
+    border: 1px solid #FFFFFF;
+    display: block;
+    float: left;
+    text-decoration: none;
+    width: 49.4%;
+    outline:none;
 }
 
-.review_form .recomend_block a.minus{
+.review_form .recomend_block a span{
 	background:#000;
+	padding:10px 0;
+	background:#bfbfbf;
+	color:#fff;
+	display:block;
+	margin:5px;
+	font-size:18px;
+	text-transform:lowercase;
+	height:20px;
+}
+.review_form .recomend_block a.active span{
+	background:#00c6ff;
+}
+.review_form .recomend_block a.active{
+	border:1px solid #d6d6d6;
+}
+.review_form .submit{
+	width:40%;
+	float:right;
+	border:none;
+	background:#00c6ff;
+	color:#fff;
+	font-weight:bold;
+	font-size:18px;
+	margin-top: 6px;
+  height: 40px;
 }
 
-.review_form textarea{
-	width:80%;
-	margin:o auto;
-}
 
 .profile_dialog{
-	width:60%;
-	margin:0 auto;
+	
+	margin: 0 230px 0 255px;
 	position: relative;
 }
 #dialog_block .close{
@@ -477,12 +592,14 @@ body {
 	float:left;
 }
 .profile_dialog .pro_avatar{
-	width:20%;
-	height:112px;
+	width:18%;	
 	overflow:hidden;
 	position:relative;
 }
-
+.profile_dialog .pro_avatar img{ 
+	width:75%;
+	max-width:100px;
+}
 .profile_dialog .pro_avatar input{
 	position:absolute;
 	font-size:120px;
@@ -496,13 +613,13 @@ body {
 }
 
 .profile_dialog .field{
-	margin-bottom:12px;
+	margin-bottom:20px;
 }
 
 .profile_dialog .field label{
-	width:19%;
-	color:#434343;
-	font-size:17px;
+	width:18%;
+	font-size: 14px;
+color: #687184;
 
 	display: -moz-inline-stack;
 	display: inline-block;
@@ -515,25 +632,29 @@ body {
 	padding:0 10px 0 5px;
 }
 .profile_dialog .field input{
-	width:79%;
+	width:80%;
 	font-size:20px;
 	margin-top:-3px;
 }
 .profile_dialog .field input.sh{
 	width:auto;
-	margin-top:6px;
+	margin-top:2px;
 }
 
 .profile_dialog .pro_name{
 	color:#434343;
 	font-size:30px;
 	display:block;
+	line-height:36px;
 }
 .profile_dialog .pro_geo{
 	background:url(/img/globe.jpg) 0 2px no-repeat;
 	padding-left:30px;
 	color:#434343;
 	font-size:17px;
+	line-height:24px;
+	display: block;
+	margin: 5px 0;
 }
 input.submit,
 button.submit{
@@ -628,4 +749,47 @@ button.submit{
 		-moz-opacity: 0;
 		-khtml-opacity: 0;
 		opacity: 0;
+}
+.content h2.nothing{
+height: 45px;
+font-size: 30px;
+color: #b1b1b1;
+margin: 25px 15px 0 15px;
+font-weight: normal;
+border-bottom: 1px solid #efefef;
+line-height: 24px;
+}
+
+#footer .pop{
+	display:none;
+}
+#footer .copy{
+	margin:0 20px 0 10px;
+}
+#footer .copy,#footer .socials,#footer .nav{
+	margin-top:10px;
+	float:left;
+	display:block;
+	color:#8b8e92;
+	font-size:14px;
+}
+#footer .nav{
+	float:right;
+	margin-right:10px;
+}
+#footer .nav a{
+	text-decoration:none;
+	color:#8b8e92;
+	padding:0 5px;
+}
+#footer .nav .item{position:relative;}
+#footer .nav .item .nav_drop a{
+	display:block;
+	color:#575757;
+	padding:10px 0;
+	border-top:1px solid #dedede;
+	border-bottom:none;
+}
+#footer .nav .item .nav_drop A:first-child{
+	border:none;
 }
