--- a/css/point.css
+++ b/css/point.css
@@ -144,14 +144,54 @@
 	font-weight:normal;
 }
 
-.comment .user{position:absolute; top:10px; left: 85px;}
+.comment .user{position:absolute; top:10px; left: 85px; color: #687184;}
+.comment .user imgvertical-align: middle;}
 .comment .date{color:#687184; font-size:10px;}
 .comment .not_recommend,.comment .recommend,.comment .name{color:#4d4d4d; font-size:14px; font-weight:bold;}
 .comment .recommend{color:#00c6ff;}
 .comment .not_recommend{color:#000;}
-.comment .duration{ font-size:11px; color:#687184;}
+.comment .duration{ font-size:11px; color:#687184; display:block; margin-top: 5px;}
+.comment .subscribe{ font-size:11px; color:#687184; display:block; height: 11px; line-height: 11px;}
 
-.comment .text{color:#687184; font-size:13px; line-height:18px; }
+.comment .text{color:#687184; font-size:13px; line-height:18px; margin-top: 38px;}
+.comment.forign .text{
+  margin-top: 0;
+}
+.comment.forign img{
+	vertical-align:middle;
+}
+.comment.forign .date{
+	display: -moz-inline-stack;
+	display: inline-block;
+	vertical-align: top;
+	zoom: 1;
+	*display: inline;
+	padding: 0 10px;
+}
+.comment .foot{
+	margin-top:20px;
+}
+.comment .foot a.fnc{
+	border-left:1px solid #b1b2b4;
+	display: -moz-inline-stack;
+	display: inline-block;
+	vertical-align: top;
+	zoom: 1;
+	*display: inline;
+
+	padding:0 7px;
+	color:#000;
+	text-transform:lowercase;
+	line-height: 12px;
+	text-decoration:none;
+}
+.comment .foot a.fnc:first-child{
+	border:none;
+	margin-left:-7px;
+}
+.comment .foot a.fnc:hover{
+  text-decoration:underline;
+}
 
 .comment .likes{
 		background:#fff;
@@ -267,4 +307,57 @@ p.dscr{
 	color:#777a7f;
 	margin-left: 20px;
 	width: 800px;
+}
+.answers .comment{
+	margin:20px 0 0 -20px;
+	padding:15px 60px 10px 20px;;
+}
+.answers .comment .bullet{
+	left:-49px;
+}
+.answers .comment .bullet img{
+	max-width:28px;
+	max-height:28px
+}
+
+.answers  .comment .user{
+	position:static;
+}
+.answers  .comment .text{
+	font-style:italic;
+	margin-top:10px;
+}
+.answers .comment .foot a.answer{display:none;}
+.answers  .comment .arr,
+.answers  .comment .arr span{
+	position:absolute;
+	left:-30px;
+	top:10px;
+	border-color: transparent #ccc transparent transparent;
+  border-style: solid;
+  border-width: 15px;
+  height: 0;
+  margin: 0;
+  padding: 0;
+	width: 0;
+	z-index:1;
+}
+.answers  .comment .arr span{
+  border-color: transparent #fff transparent transparent;
+  left: -14px;
+  top: -15px;
+
+}
+.answers  .comment .relator{
+	position:relative;
+}
+
+.comment .ans_form textarea{
+	width:100%;
+}
+.comment .ans_form .foot{
+	margin-top:5px;
+}
+.comment .ans_form .submit{
+	margin-right:20px;
 }
