--- a/css/point.css
+++ b/css/point.css
@@ -35,17 +35,29 @@
 }
 
 #point_gallery{
-	height:180px;
-	padding-left: 8px;
+	height:170px;
+	padding-left: 5px;
   text-align: left;
 	font-size:0;
+	margin-bottom:20px;
+	overflow:hidden;
 }
 
 #point_gallery a{
 	text-decoration:none;
+	display: block;
+	float: left;
+	height: 163px;
+	overflow: hidden;
+	padding: 7px 4px 0;
+	text-align: center;
+	width: 155px;
 }
 #point_gallery img{
-	padding: 15px 6px;
+    max-height: 150%;
+    max-width: 150%;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 #point_name,
@@ -361,3 +373,24 @@ p.dscr{
 .comment .ans_form .submit{
 	margin-right:20px;
 }
+
+#point_gallery a.admin{
+  position:relative;
+}
+#point_gallery a.admin span{
+	display:block;
+	width:100%;
+	height:165px;
+	position:absolute;
+	left:0;
+	top:8px;
+	z-index:10;
+	background:#00C6FF;
+	opacity:.5;
+}
+#point_gallery a.admin span i{
+	margin:42px 0 0 35px;
+	width:100px; height:85px; display:block;
+	background:url(/img/sprite.png) 0 -59px no-repeat;
+}
+
