--- a/css/share.css
+++ b/css/share.css
@@ -793,3 +793,31 @@ line-height: 24px;
 #footer .nav .item .nav_drop A:first-child{
 	border:none;
 }
+
+.pop_err,
+.pop_msg{
+	position:fixed;
+	z-index:100;
+	width:300px;
+	left:50%;
+	top:45%;
+	margin-left:-150px;
+	padding:20px 10px 10px 10px;
+	background:#f00;
+	color:#fff;
+	box-shadow:0 0 5px #000;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+.pop_msg{
+  background:#0f0;
+}
+.pop_err .close,
+.pop_msg .close{
+	position:absolute;
+	top:5px;
+	right:5px;
+	font-size:10px;
+	color:#fff;
+}
