--- a/trunk/css/point_list.css
+++ b/trunk/css/point_list.css
@@ -223,24 +223,32 @@
 .point_list .foot .rss,
 .point_list .foot .geo{
 	display:block;
-	padding-right:12px;
+	padding-right:0px;
 	float:left;
 	border-right:1px solid #dedcdc;
 }
 .point_list .foot .geo{
-	padding-left:12px;
+	padding-left:6px;
+padding-right:6px;
 }
 .point_list .foot .rss i{
 	width:20px; height:20px;
 	background-position:-80px -17px;
 }
+.point_list .foot .rss i:hover{
+background-position: -80px -38px;
+}
 .point_list .foot .rss.subscribed i{
-	background-position:-80px -38px;
+background-position: -80px -38px;
 }
 
 .point_list .foot .geo i{
-	width:14px; height:20px;
-	background-position:-65px -17px;
+	background-position: -15px -15px;
+    height: 17px;
+    width: 10px;
+}
+.point_list .foot .geo i:hover{
+	background-position: -15px -34px;
 }
 
 .point_list .foot .comms,
